--- a/src/assets/css/sass/controle_aula/_controle_aula.scss
+++ b/src/assets/css/sass/controle_aula/_controle_aula.scss
@@ -194,13 +194,13 @@
           width: auto;
           max-width:300px;
           background: #fff;
-          height: 55px;
-          border: 0px solid #aaa;
+          height: 70px;
+          border: 1px solid #ee9;
           overflow: hidden;
           transition: height 0.5s;
           box-shadow: 0px 1px 2px #666;
           font-size: 13px;
-          padding: 5px;
+          padding: 5px 10px 10px 10px;
 
       
           .aula_detalhes{
@@ -233,7 +233,7 @@
      
         }
         .open_aula {
-          height: 240px;
+          height: 260px;
         }
   
          .btn_deletar_aula{
