--- a/src/assets/css/sass/controle_aula/_controle_aula.scss
+++ b/src/assets/css/sass/controle_aula/_controle_aula.scss
@@ -87,14 +87,14 @@
     
             }
             &:active{
+              background:#f6f6e0;
   
               
             }
           }
           .active{
-            background:#eee;
+            background:#ffe;
             color: #333;
-            border:0px;
               &:hover{
            //  background:#dddede;
               // color:#fff;
