--- a/src/assets/css/sass/controle_aula/_form_add_aula.scss
+++ b/src/assets/css/sass/controle_aula/_form_add_aula.scss
@@ -23,15 +23,16 @@ dialog{
   box-shadow: 0px 1px 2px #666;
 
   .close_form{
-right:0px;
-top:0px;
-padding: 5px 10px;
-position:absolute;
-cursor:pointer;
+    right:0px;
+    top:0px;
+    padding: 5px 10px;
+    position:absolute;
+    cursor:pointer;
 
-&:hover{
-  background:#ddd;
-}
+    &:hover{
+      background:rgb(221, 79, 79);
+    color:#fff;
+    }
   }
 
 }
@@ -64,7 +65,7 @@ background:#fff;
 
 }
 .edit_form{
-  background:#fffff9 !important;
+  background:#fffffc !important;
  // border:2px solid #ee9;
   div{
     label{
