--- a/src/assets/css/sass/style.scss
+++ b/src/assets/css/sass/style.scss
@@ -23,9 +23,12 @@ p{
 }
 a {
   cursor: pointer;
-}
+} 
 body {
-  background: #ddd;
+ background:#ccc;
+
+  background: #ddd url("https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/rm380-16-x_1.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=d0c544f028f2405b219eb997cb580e21") ; 
+ background-size: 100% auto ;
   font-family: $font-stack;
   position:relative;
 }
