--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -598,6 +598,10 @@ input:disabled {
   margin: 0px;
   margin-left: 10px;
 }
+#controle_aula #form_select_aluno button svg {
+  margin-bottom: -2px;
+  margin-right: 5px;
+}
 #controle_aula #bg_cursos nav.nav_cursos_aluno {
   background-color: #fff;
   border: 1px solid #ccc;
@@ -644,6 +648,7 @@ input:disabled {
 }
 #controle_aula #bg_cursos .bg_curso {
   background: #fff;
+  background: #ddd;
   padding: 10px;
   border: 1px solid #ccc;
   display: none;
@@ -677,13 +682,12 @@ input:disabled {
   color: red;
 }
 #controle_aula #bg_cursos .title span[class*=excel] {
-  color: green;
+  color: #269426;
 }
 #controle_aula #bg_cursos .title span[class^=informática], #controle_aula #bg_cursos .title span[class*=informática] {
   color: blue !important;
 }
 #controle_aula #bg_cursos .bg_bimestres {
-  background: #fff;
   width: 100%;
   min-height: 300px;
   display: flex;
@@ -712,6 +716,7 @@ input:disabled {
   margin-bottom: 10px;
   padding-bottom: 10px !important;
   border-bottom: 1px solid #ccc;
+  color: #4d4d4d;
 }
 #controle_aula #bg_cursos .bg_bimestres .bimestres .columns {
   width: 25%;
@@ -723,12 +728,12 @@ input:disabled {
   margin-top: 10px;
   width: auto;
   max-width: 300px;
-  background: #fff;
+  background: #ffffff;
   height: 70px;
-  border: 1px solid #ee9;
+  border: 1px solid #466cb3;
   overflow: hidden;
   transition: height 0.5s;
-  box-shadow: 0px 1px 2px #666;
+  box-shadow: 0px 1px 1px #9c9c9c;
   font-size: 13px;
   padding: 5px 10px 10px 10px;
 }
@@ -826,7 +831,9 @@ a {
 }
 
 body {
-  background: #ddd;
+  background: #ccc;
+  background: #ddd url("https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/rm380-16-x_1.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=d0c544f028f2405b219eb997cb580e21");
+  background-size: 100% auto;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   position: relative;
 }
