Ajustes de estilo de layout

--- a/src/assets/css/sass/controle_aula/_form_add_aula.scss
+++ b/src/assets/css/sass/controle_aula/_form_add_aula.scss
@@ -65,8 +65,8 @@ background:#fff;
 
 }
 .edit_form{
-  background:#fffffc !important;
- // border:2px solid #ee9;
+  background:#ffffff !important;
+  border:2px solid rgb(106, 138, 207);
   div{
     label{
       background:transparent !important;
