--- a/src/assets/css/sass/abstracts/_forms.scss
+++ b/src/assets/css/sass/abstracts/_forms.scss
@@ -19,6 +19,7 @@ display:flex;
     flex-basis:100%;
     text-align: center;
     margin-bottom:10px;
+    svg{margin-bottom:-1px; margin-right:2px;}
   }
    div{
      display:flex;
