--- a/src/assets/css/sass/controle_aula/_controle_aula.scss
+++ b/src/assets/css/sass/controle_aula/_controle_aula.scss
@@ -239,6 +239,7 @@
         }
   
          .btn_deletar_aula{
+           z-index: 2;
            cursor:pointer;
            float:left;
            padding:3px;
@@ -250,6 +251,8 @@
            color:rgb(219, 30, 30);
 
            }
+           svg{ z-index: 0;}
+           
          }
          .btn_edit_aulas{
            float:right;
