--- a/src/assets/css/sass/abstracts/_variables.scss
+++ b/src/assets/css/sass/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 //container
 $container-width: 1200px;
 //Colors
-$primary-color: #0064ff;
+$primary-color: #245da7;
 $secondary-color: #ed1860;
 
 //Text
