--- a/src/assets/css/sass/controle_aula/_controle_aula.scss
+++ b/src/assets/css/sass/controle_aula/_controle_aula.scss
@@ -6,41 +6,55 @@
   overflow: hidden;
   h1 {
     color: $title-color-dark;
-    text-align: left;
-    font-size:20px; 
+    text-align: center;
+    font-size:24px; 
+    margin-top:40px;
+    margin-bottom:40px;
     color: $text-color;
     width:100%;
+    text-transform: uppercase;
+    color:#444;
   }
 
 
   #form_select_aluno {
-   background: #fff;
-   // border: $border-set-default;
-   margin-bottom:20px;
+   //background: #333;
+   //border: $border-set-default;
     width: 100%;
     height: auto;
-    padding: 10px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    padding-bottom:10px;
     label{
       background:#fff;
-      border:$border-set-default;
       display: block;
-      padding:6px;
+      padding: 10px;
+      border: 1px solid #444;
+      border-right:0px;
+    
 
     }
+
     .div_input {
- 
     display:flex;
       float: left;
       justify-content: center;
+      select{
+    padding: 10px;
+    border: 1px solid #444;
+
+
+        font-weight: bold;
+        font-size:16px;
+      }
     }
     button {
       float: right;
       margin:0px;
       margin-left:10px;
+      padding:14px;
       svg{
         margin-bottom:-2px;
         margin-right:5px;
@@ -66,18 +80,38 @@
         text-transform: uppercase;
 
       }
+      .btn_add_curso{
+        border: 1px solid $primary-color;
+        padding:5px 10px;
+        cursor:pointer;
+        background:$primary-color;
+        color:#fff;
+
+        svg{
+           margin-bottom:-2px; 
+           max-width: 100px;
+           max-height: 100px;
+           height:25px;
+           width:auto;
+        }
+        &:hover{
+          background:$primary-color;
+        }
+      }
+
       ul {
         overflow:hidden;
         display:block;
         float: right;
         display: flex;
+    
 
         li {
           list-style: none;
-          padding:10px 0px;
+          padding:15px 0px;
           
           a {
-            padding: 10px 20px 10px 20px;
+            padding: 15px 20px 16px 20px;
             background: #fff;
             border: $border-set-default;
             border-top:0px;
@@ -107,13 +141,29 @@
         }
       }
     }
+    .btn_add_aula{
+     top:20px;
+     right:15px;
+
+      position: absolute;
+      color: #333;
+      border:1px solid $primary-color;
+      background:#f0f0f0;
+      &:hover{
+      background: #ffe;
+
+      }
+
+    }
+
     .bg_curso{
+      position: relative;
       background:#fff;
     background:#ddd;
 
-      padding:10px; 
+      padding:20px; 
       border:$border-set-default;
-      h3{ padding:10px;}
+      h3{ padding:20px;}
       display:none;
     }
     .title_aluno_info{
@@ -121,6 +171,8 @@
       .title_info_ra{
         font-weight: normal;
       }
+
+   
     
     } 
     .title{
@@ -149,6 +201,19 @@
    //informática
       span[class^="informática"], span[class*="informática"]{ 
         color:blue !important;
+      }
+    }
+    .bg_btn_deletar_curso{
+      text-align:center;
+      button{
+        background:#e55;
+        color:#fff;
+        padding:5px;
+        border:$border-set-default;
+        cursor:pointer;
+        &:hover{
+          background:red;
+        }
       }
     }
     .bg_bimestres {
@@ -199,7 +264,7 @@
           width: auto;
           max-width:300px;
           background: #ffffff;
-          height: 70px;
+          height: 80px;
        border: 1px solid rgb(70, 108, 179);
           overflow: hidden;
           transition: height 0.5s;
@@ -277,7 +342,7 @@
          right:0px;
          top:0px;
           font-size:16px;
-          background: rgb(48, 104, 177); 
+          background: $primary-color; 
           text-align: center;
           height:22px;
           width:30px;
