--- a/src/assets/css/sass/style.scss
+++ b/src/assets/css/sass/style.scss
@@ -33,10 +33,12 @@ body {
   position:relative;
 }
 header {
-  background: darken($primary-color, 10%);
+  grid-area: header;
+  background: #333;
+  border-bottom:2px solid #ccc;
   width: 100%;
   #header_center {
-    height: 55px;
+    height: 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -44,39 +46,72 @@ header {
     padding: 0px $padding-heavy;
     max-width: $container-width;
 
-    figure {
-      width: auto;
-      height: 20px;
+
+  }
+}
+
+#app{
+  max-width: 100%;
+  margin: 0 auto;
+  display: grid;
+grid-template-columns: 250px 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-areas:
+  'aside header header header header header header header'
+  'aside  cp     cp     cp     cp     cp     cp     cp'
+  'aside  footer footer footer footer footer footer footer';
+}
+
+aside#bg_main_menu_lateral{
+  
+    figure#bg_logo {
+      padding:20px;
+      max-width: 100%;
+     height:auto;
       overflow:hidden;
-      display: block;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
       img {
-        max-width: 100%;
+        max-width: 150px;
         max-height: 100%;
+        
       }
     }
-    nav {
-      ul li {
-        display: inline;
-        a {
-          padding: 13px 15px;
-          color: #fafafa;
-          height: auto;
-          font-size: 14px;
-          &:hover {
-            color: lighten($primary-color, 30%);
-            border-bottom: 4px solid lighten($primary-color, 20%);
-          }
+  grid-area: aside; 
+  background:#222;
+  nav {
+    margin-top:40px;
+    ul li {
+      clear:both;
+      a {
+        padding: 13px 15px;
+        color: #fafafa;
+        height: auto;
+        font-size: 14px;
+        width:100%;
+        display: block;
+
+        &:hover {
+          color: lighten($primary-color, 30%);
+          background:#333;
         }
       }
     }
   }
 }
-.container{
-  max-width: $container-width;
-  margin: 0 auto;
-}
-.components{
-  padding:0px 40px;
-}
+ #content_page{
+   grid-area: cp;
+   max-width: 1300px;
+   min-height:100vh;
+   padding:40px;
+ }
 
+
+
+footer{
+  grid-area: footer;
+  height:50px;
+  background:#111;
+}
 
