--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -929,6 +929,11 @@ a {
   cursor: pointer;
 }
 
+svg {
+  margin-bottom: -2px;
+  margin: 0px 2px -2px 2px;
+}
+
 body {
   background: #ccc;
   background: #ddd url("https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/rm380-16-x_1.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=d0c544f028f2405b219eb997cb580e21");
@@ -1001,7 +1006,7 @@ aside#bg_main_menu_lateral nav ul li a:hover {
   grid-area: cp;
   max-width: 1300px;
   min-height: 100vh;
-  padding: 40px;
+  margin: 0px 60px 0px 60px;
 }
 
 footer {
