--- a/src/components/controle_aula/index.html
+++ b/src/components/controle_aula/index.html
@@ -12,7 +12,7 @@
     <label for="add_aluno_ra">RA:</label>
     <input required id="add_aluno_ra" type="text" list="add_aluno_datalist_ra"/>
 <datalist id='add_aluno_datalist_ra'>
-  <option value='tesette'></option>
+  <option></option>
 </datalist>
   </div>
   <div>
@@ -146,8 +146,8 @@
       <div>
         <div class="div_input">
           <label>Aluno: </label>
-          <select id="select_aluno" class="input-primary">
-            <option value="" disabled>Selectione uma Aluno</option>
+          <select id="main_select_aluno" class="input-primary">
+            <option value="" disabled>Selectione um Aluno</option>
           </select>
         </div>
    
@@ -168,5 +168,4 @@
 
   </div>
   <!--components-->
-
 </div>
