--- a/src/assets/css/sass/controle_aula/_controle_aula.scss
+++ b/src/assets/css/sass/controle_aula/_controle_aula.scss
@@ -145,9 +145,8 @@
       display: flex;
       align-items: center;
       background:#eee;
-
       color:$primary-color;
-      padding:5px 15px;
+      padding:5px 10px 8px 10px;
       svg{
      height:25px; width:auto;
 
