--- a/src/assets/css/sass/style.scss
+++ b/src/assets/css/sass/style.scss
@@ -10,7 +10,7 @@
   width:100%; 
   min-height: 100vh;
   position: absolute;
-  background-color: #33333350;
+  background-color: #11111170;
   z-index: 1;
   bottom:0px;
   top:0px;
@@ -102,7 +102,7 @@ aside#bg_main_menu_lateral{
     }
   }
 }
- #content_page{
+ #page_content{
    grid-area: cp;
    max-width: 1300px;
    min-height:100vh;
