Refatoração alunoContent - WIP

--- a/src/assets/css/sass/controle_aula/_controle_aula.scss
+++ b/src/assets/css/sass/controle_aula/_controle_aula.scss
@@ -61,7 +61,7 @@
       }
     }
   }
-  #bg_cursos {
+  #aluno_content {
     border-radius: 5px 5px 0px 0px;
     border: $border-set-default;
     overflow: hidden;
