--- a/src/components/controle_aula/formAddCurso.html
+++ b/src/components/controle_aula/formAddCurso.html
@@ -1,6 +1,5 @@
-
 <form id="form_add_curso" class="forms">
-    <span class="close_form">X</span>
+    <span class="btn_close_form">X</span>
     <h3><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-journal-plus" viewBox="0 0 16 16">
       <path fill-rule="evenodd" d="M8 5.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V10a.5.5 0 0 1-1 0V8.5H6a.5.5 0 0 1 0-1h1.5V6a.5.5 0 0 1 .5-.5z"/>
       <path d="M3 0h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-1h1v1a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v1H1V2a2 2 0 0 1 2-2z"/>
@@ -8,12 +7,12 @@
     </svg> Adicionar Curso</h3>
     <div>
       <label for="nome">Aluno:</label>
-      <select required id='select_aluno_add_curso'></select>
+      <select required id='select_aluno'></select>
       
     </div>
     <div>
       <label><span class='required'>&nbsp;&nbsp;*</span> Curso:</label> 
-      <select required id='add_curso_nome_curso'>
+      <select required id='select_curso'>
         <option selected="true" disabled="disabled" value=''>Selecione o Curso</option>
         <option class='informatica' data-abreviation='IFK' value='Informática KIDS'>Informática KIDS</option>
         <option class='informatica' data-abreviation='IFC' value='Informática Completo'>Informática Completo</option>
