--- a/src/components/controle_aula/formAddAula.html
+++ b/src/components/controle_aula/formAddAula.html
@@ -8,19 +8,19 @@
   
     <div>
         <label for="nome">Nome:</label>
-        <select id='select_aluno_add_aula'>
+        <select id='select_aluno'>
             <option></option>
         </select>
   </div>
   
     <div><label>Curso:</label>
-      <select id='select_curso_add_aluno'>
+      <select id='select_curso'>
         <option></option>
         </select>
       </div>
     <div>
       <label>Bimestres</label>
-      <select required id='select_bimestre_add_aluno'>
+      <select required id='select_bimestre'>
        
         <option value='' disabled  selected>Selecione o Bimestre</option>
            <option value='bimestre 1'>Bimestre 1</option>
@@ -32,7 +32,7 @@
       </select>
   
       <label>Aulas Nº:</label>
-      <select required id='aula_numero' disabled>
+      <select required id='select_aula' disabled>
         <option value='' disabled selected>Selecione a Aula</option>
   
         <option value="aula 01">Aula 1</option>
@@ -64,23 +64,3 @@
     <div><label>Detalhes:</label><textarea  required  id="detalhes"></textarea></div>
     <input type="submit" value="Salvar" />
   </form>
-  </div>
-  <div class="components" id="controle_aula">
-    <h1>Controle de Aula</h1>
-    <div class="page_content">
-      <form id="form_select_aluno">
-        <div>
-          <div class="div_input">
-            <label>Aluno: </label>
-            <select id="main_select_aluno" class="input-primary">
-              <option value="" disabled>Selectione um Aluno</option>
-            </select>
-          </div>
-          <button class="btn-primary" id="btn_add_aluno" type="button">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus-fill" viewBox="0 0 16 16">
-              <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-              <path fill-rule="evenodd" d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z"/>
-            </svg>Aluno
-          </button>
-        </div>
-      </form>
