Formulário edit aula, funções básicas funcionando - WIP

--- a/src/assets/css/sass/controle_aula/_controle_aula.scss
+++ b/src/assets/css/sass/controle_aula/_controle_aula.scss
@@ -342,7 +342,7 @@
            svg{ z-index: 0;}
            
          }
-         .btn_edit_aulas{
+         .btn_edit_aula{
            float:right;
            padding:3px; 
            margin-top:5px;
